--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.8.4",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-scroll-up-button": "^1.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
