add Admin page & alert popup

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-hot-loader": "^4.8.4",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "react-scroll-up-button": "^1.6.4"
+    "react-scroll-up-button": "^1.6.4",
+    "react-simplert": "0.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
